# EchoEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Echo.sln  EchoEngine.sln  LICENSE  README.md  premake5.lua
Echo/: CMakeLists.txt  Echo.vcxproj  Echo.vcxproj.filters  MouseEvent.h
Echo-Editor/: Echo-Editor.vcxproj  imgui.ini
Echo-Editor/assets/shaders/: Texture.glsl
Echo-Editor/src/: EchoEditorApp.cpp  EditorLayer.cpp  EditorLayer.h
Echo/src/: Core.h  Echo.h  echopch.cpp  echopch.h
Echo/src/Core/: Application.cpp  Application.h  EchoApplication.cpp  EchoApplication.h  EngineCore.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  TimeStep.cpp  TimeStep.h
Echo/src/Core/Events/: ApplicationEvent.h  ApplicationEvent.hpp  Event.h  KeyEvent.h  MouseEvent.h
Echo/src/Echo/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  Window.h
Echo/src/Echo/Events/: ApplicationEvent.hpp  Event.h  KeyEvent.hpp  MouseEvent.h  MouseEvent.hpp
Echo/src/Echo/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Echo/src/Echo/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  GraphicContext.h  GraphicsContext.h  RenderCommond.cpp  RenderCommond.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
Echo/src/GUI/: ConsoleDockWidget.cpp  GLWidget.cpp  GLWidget.h  MainWindow.cpp  MainWindow.h  PropertyDockWidget.cpp  PropertyDockWidget.h  Windows_MainWindow.cpp  Windows_MainWindow.h
Echo/src/GUI/ImGUI/: ImGUIBuild.cpp  ImGUILayer.cpp  ImGUILayer.h
Echo/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Echo/src/Platform/Windows/: MainWindow_Windows.cpp  MainWindow_Windows.h  WindowsInput.cpp  WindowsInput.h  Windows_Window.cpp  Windows_Window.h
Echo/src/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  EditorCamera.cpp  EditorCamera.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.cpp  GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  RenderCommond.cpp  RenderCommond.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  SceneCamera.cpp  SceneCamera.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Echo/src/Renderer/Camera/: Camera.cpp  Camera.h  EditorCamera.cpp  EditorCamera.h  SceneCamera.cpp  SceneCamera.h
Echo/src/Scene/: Component.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h
Echo/src/Utils/: EchoLog.cpp  EchoLog.h  Input.h  KeyCodes.h  Log.cpp  Log.h  MouseCodes.h  TimeStep.cpp  TimeStep.h
EchoEditor/: CMakeLists.txt  EchoEditor.cpp  EchoEditor.h
EchoEditor/res/: EchoEditor.qrc
EchoEditor/src/: main.cpp  pch.h
EchoEditor/src/GUI/: ConsoleDock.cpp  ConsoleDock.h  GLWidget.cpp  GLWidget.h  GraphicWidget.cpp  GraphicWidget.h  MainWindow.cpp  MainWindow.h
EchoEngine/: EchoEngine.vcxproj
EchoEngine/src/: main.cpp
EchoUI/: EchoUI.vcxproj  EchoUI.vcxproj.filters
EchoUI/src/: Core.h
EchoUI/src/GUI/: MainWindow.cpp  MainWindow.h
Engine/: Engine.vcxproj  Engine.vcxproj.filters
Engine/src/: Engine.h  echopch.cpp  echopch.h  enginepch.cpp
Engine/src/Core/: EchoApplication.cpp  EchoApplication.h  EngineCore.h  EntryPoint.h  Layer.cpp
Engine/src/Core/Events/: Event.h
Engine/src/GUI/: ConsoleDockWidget.cpp  ConsoleDockWidget.h  GLWidget.cpp  GLWidget.h  Windows_MainWindow.cpp  Windows_MainWindow.h
Engine/src/Utilities/: EngineLog.cpp  EngineLog.h
Nest/: Nest.vcxproj  Nest.vcxproj.filters
Nest/src/: Nest.h  nestpch.h
Nest/src/Core/: Application.cpp  Application.h  DockWidgetManager.cpp  DockWidgetManager.h  EntryPoint.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  NestCore.h
Nest/src/GUI/: ConsoleDockWidget.cpp  ConsoleDockWidget.h  GLWidget.cpp  GLWidget.h  Windows_MainWindow.cpp  Windows_MainWindow.h
Nest/src/Utilities/: Log.cpp  Log.h
Nest/src/Utils/: Log.cpp  Log.h
NestUI/: EchoUI.vcxproj.filters  NestUI.vcxproj  NestUI.vcxproj.filters
NestUI/src/: DockWidgetManager.cpp  DockWidgetManager.h  NestUI.h
NestUI/src/UI/: DockWidget.cpp  DockWidget.h  MainWindow.cpp  MainWindow.h
NestUI/src/UI/PropertyEditor/: CBaseProperty.cpp  CBaseProperty.h  CBoolProperty.cpp  CBoolProperty.h  CButtonBasedEditor.cpp  CButtonBasedEditor.h  CColorProperty.cpp  CColorProperty.h  CDateProperty.cpp  CDateProperty.h  CDateTimeProperty.cpp  CDateTimeProperty.h  CDoubleProperty.cpp  CDoubleProperty.h  CFontProperty.cpp  CFontProperty.h  CIntegerProperty.cpp  CIntegerProperty.h  CListProperty.cpp  CListProperty.h  CPropertyEditor.cpp  CPropertyEditor.h  CPropertyHeader.cpp  CPropertyHeader.h  CStringProperty.cpp  CStringProperty.h  CTimeProperty.cpp  CTimeProperty.h  QColorComboBox.cpp  QColorComboBox.h
NestUI/src/Widgets/: DockWidget.h  MainWindow.h
SandBox/: CMakeLists.txt  SandBox.vcxproj  SandBox.vcxproj.filters  imgui.ini
SandBox/assets/shaders/: BasicPBR.glsl  Texture.glsl
SandBox/src/: ExampleLayer.cpp  ExampleLayer.h  SandBox2D.cpp  SandBox2D.h  SandBoxApp.cpp  SandBoxApp.h  main.cpp  pch.h
Sandbox/: Sandbox.vcxproj  imgui.ini
Sandbox/src/: SandboxApp.cpp
Study Notes/: EchoEngine.md  EventSystem.md
docs/: EchoEngine.puml  GraphicWidget类设计文档.md  渲染模块设计文档.md
